# agentkit

./: .gitignore  LICENSE  README.md  flake.nix  piw
.agent/: keybindings.json  napkin.md
.pi/extensions/: auto-test.ts  prompt-history.ts  worktree.ts
_global/agents/: debugger.md  documenter.md  planner.md  refactorer.md  researcher.md  reviewer.md  scout.md  tester.md  verifier.md  worker.md
_global/extensions/: .loop.ts.bak  account-switcher.ts  auto-test.ts  clear.ts  context.ts  file-trigger.ts  git-checkpoint.ts  git-dirty.ts  git-rebase-env.ts  handoff.ts  helix-editor.ts  interactive-shell.ts  iroh-rpc.ts  loop.ts  mode.ts  notify.ts  rust-init.ts  safety-guards.ts  swarm.ts  swarm.ts.bak  truncated-tool.ts  web-fetch.ts
_global/extensions/.plan-mode.bak/: index.ts  utils.ts
_global/extensions/glasgow/: exec.ts  index.ts
_global/extensions/glasgow/tools/: advanced.ts  analyzer.ts  device.ts  gpio.ts  i2c.ts  jtag.ts  memory.ts  misc.ts  program.ts  sensor.ts  spi.ts  swd.ts  uart.ts
_global/extensions/plan-mode/: index.ts  utils.ts
_global/skills/acl/: SKILL.md
_global/skills/browser-cli/: SKILL.md
_global/skills/chaoscontrol/: SKILL.md
_global/skills/clan/: SKILL.md
_global/skills/cloud/: SKILL.md
_global/skills/context7-cli/: SKILL.md
_global/skills/db-cli/: SKILL.md
_global/skills/git-worktree/: SKILL.md
_global/skills/gmaps-cli/: SKILL.md
_global/skills/integration-testing-vms/: SKILL.md
_global/skills/iroh-rpc/: SKILL.md
_global/skills/kagi-search/: SKILL.md
_global/skills/nix/: SKILL.md
_global/skills/nix-prefetch-sri/: SKILL.md
_global/skills/pexpect-cli/: SKILL.md
_global/skills/roster/: SKILL.md
_global/skills/screenshot-cli/: SKILL.md
_global/skills/tags/: SKILL.md
_global/skills/tigerstyle/: SKILL.md
_global/skills/tigerstyle/references/: tigerstyle.md
_global/skills/ultra-mode/: SKILL.md
_global/skills/validate/: SKILL.md
_global/skills/vars/: SKILL.md
_global/skills/weather-cli/: SKILL.md
_global/skills/web-fetch/: SKILL.md
onix-core/.claude/: analysis-2026-01-05-ultra-mode.md  settings.local.json  vllm-deployment-plan-timestamp.txt  vllm-deployment-plan.md
tools/browser-cli/: pyproject.toml
tools/browser-cli/browser_cli/: __init__.py  cli.py  client.py  paths.py  server.py
tools/context7-cli/: context7_cli.py  default.nix  pyproject.toml
tools/iroh-rpc/: Cargo.toml  README.md  default.nix  test-session.sh  test_blobs.rs
tools/iroh-rpc/src/: main.rs
tools/kagi-search/: kagi_search.py  pyproject.toml
tools/pexpect-cli/: default.nix
tools/pexpect-cli/pexpect_cli/: server.py
tools/screenshot-cli/: default.nix  pyproject.toml  screenshot_cli.py
tools/weather-cli/: default.nix  pyproject.toml
tools/weather-cli/lib/weather_cli/: __init__.py  main.py
tools/web-fetch/: default.nix  pyproject.toml
tools/web-fetch/lib/web_fetch/: __init__.py  main.py
