[package]
name = "iroh-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.96"
irpc = { version = "0.12", features = ["rpc", "derive", "spans"] }
irpc-iroh = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
n0-future = "0.3"
n0-error = "0.1"
dirs = "5"
rand = "0.9"
chrono = "0.4"
