[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagi-search"
version = "0.1.0"
description = "Python script for Kagi search using session tokens"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
kagi-search = "kagi_search:main"

[tool.hatch.build.targets.wheel]
packages = ["kagi_search.py"]
