[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenshot-cli"
version = "0.1.0"
description = "Cross-platform screenshot CLI for macOS and KDE Wayland"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
screenshot-cli = "screenshot_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["screenshot_cli.py"]
